<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, CamcapLibActivity!</string>
    <string name="app_name">CamCap Demo</string>
    <string name="number_of_fotos">Number of pictures</string>
    <string name="interval">interval in sec.</string>
    <string name="capture">Capture</string>
    <string name="start_bracketing_mode">Start\nbracketing</string>
    <string name="stop_bracketing_mode">Stop\nbracketing</string>
    <string name="start_time_lapse_mode">Start\ntime-lapse</string>
    <string name="stop_time_lapse_mode">Stop\ntime-lapse</string>
    <string name="app_not_licensed">The App is not licensed.\nPlease buy the App in Market.</string>
    <string name="shutter_speed">Shutter Speed</string>
    <string name="aperture">Aperture</string>
    <string name="iso">ISO</string>
    <string name="picture_style">Picture Style</string>
    <string name="metering_mode">Metring M.</string>
    <string name="white_balance">White B.</string>
    <string name="exposure_compensation">Ev</string>
    <string name="compression">Quality</string>
    <string name="kelvin">Kelvin</string>
    <string name="eula_title">License</string>
    <string name="eula_accept">Accept</string>
    <string name="eula_refuse">Refuse</string>
    <string name="program_mode">Mode:</string>
    <string name="time_lapse">Time lapse</string>
    <string name="bracketing_mode">Auto Bracketing</string>
    <string name="latest_snapshots">&gt;&gt; Latest snapshots</string>
    <string name="live_view_off">Live view OFF</string>
    <string name="live_view_on">Live view ON</string>
    <string name="step_size">Step size:</string>
    <string name="autofocus">Autofocus</string>
    <string name="loading_image">Loading Image ...</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_title">Thank you for supporting our application. \nPlease provide information about functions that are worked or not.</string>
    <string name="feedback_func_liveview">Live View</string>
    <string name="feedback_func_autofocus">Autofocus</string>
    <string name="feedback_func_manual_focus">Manual focus</string>
    <string name="feedback_button_send">Send feedback</string>
    <string name="feedback_func_metering_mode">Metering mode</string>
    <string name="feedback_func_white_balance">White balance</string>
    <string name="feedback_properties">Properties</string>
    <string name="feedback_functions">Functions</string>
    <string name="feedback_summary">Summary</string>
    <string name="feedback_option_read">Read?</string>
    <string name="feedback_option_write">Write?</string>
    <string name="feedback_option_work">Ok?</string>
    <string name="feedback_data_title">Private data (optional)</string>
    <string name="feedback_data_mail">E-mail:</string>
    <string name="feedback_data_cam_model">Camera model:</string>
    <string name="feedback_data_android_device">Android device:</string>
    <string name="main_menu_select_camera">Select camera</string>
    <string name="main_menu_fullscreen">Full screen</string>
    <string name="settings">Settings</string>
    <string name="setting_transfer_file_type">Transfer settings</string>
    <string name="settings_transfer_jpeg">JPEG</string>
    <string name="setting_transfer_raw">RAW</string>
    <string name="bracketing_demo_hint">This function is not available in CamCap Demo. See the full version of CamCap.</string>
    <string name="show_on_market">Show on Market</string>
    <string name="property_not_available">This property is not supported in CamCap Demo.\nPlease buy a full version on Market</string>
    <string name="button_buy_on_market">Buy on Market</string>
    <string name="button_continue_testing">No, Thanks</string>
    <string name="textView_lowQuality">Demo version! The image preview is low quality.</string>
</resources>
